--- a/Group.cls
+++ b/Group.cls
@@ -53,7 +53,7 @@ If eventlist Is Nothing Then Exit Sub
 Dim i As Long
 With eventlist
 For i = 0 To .count - 1
-    .index = i
+    .Index = i
     .Done = True
     .Value = vbNullString
     .sValue = 0
@@ -68,7 +68,7 @@ Dim eventlist2 As New FastCollection
 Dim i As Long
 With eventlist
 For i = 0 To .count - 1
-    .index = i
+    .Index = i
     .Done = True
     eventlist2.AddKey .KeyToString, ""
 Next i
